# Sirius

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Sirius.bat  render_demo.sh  render_test.sh
.github/workflows/: build.yml
docs/: README.md  architecture.md  comment.md  foundations.md  guide.md  philosophy.md  refactor.md  specification.md  standard.md  type.md  types.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/optix/include/: optix.h  optix_denoiser_tiling.h  optix_device.h  optix_function_table.h  optix_function_table_definition.h  optix_host.h  optix_micromap.h  optix_stack_size.h  optix_stubs.h  optix_types.h
scripts/: benchmark-gpu-cpu.sh  setup-wsl2-cuda.sh  setup-wsl2-deps.sh  setup-wsl2-optix.sh
src/Sirius.Core/Autodiff/: MTDL001A.h
src/Sirius.Core/Camera/: CMBS001A.h  CRGC001A.cpp  CRGC001A.h
src/Sirius.Core/Constants/: PHCN001A.h
src/Sirius.Core/Coordinate/: PHCT001A.h  PHCT002A.h  PHCT003A.h
src/Sirius.Core/Disk/: PHAD000A.h  PHAD001A.h  PHAD002A.h  PHAD003A.h  PHCR001A.h  PHTR001A.h
src/Sirius.Core/Environment/: PHSF001A.h
src/Sirius.Core/Geodesic/: PHGD000A.h  PHGD001A.cpp  PHGD001A.h  PHGD002A.cpp  PHGD002A.h  PHMT000A.h  PHMT000B.h  PHSI001A.h
src/Sirius.Core/Jet/: PHJT001A.h  PHJT002A.h
src/Sirius.Core/Metric/: PHMT000A.cpp  PHMT000A.h  PHMT000B.h  PHMT100A.h  PHMT100B.h  PHMT101A.h  PHMT102A.h  PHSM001A.h
src/Sirius.Core/Polarisation/: PHPL001A.h
src/Sirius.Core/PostProcess/: PPOP001A.h
src/Sirius.Core/Spectral/: MTSB001A.h  PHSC001A.h  PHSP001A.h
src/Sirius.Core/Symplectic/: MTSB001A.h  PHSI001A.h
src/Sirius.Core/Tensor/: MTTN001A.cpp  MTTN001A.h  MTVT001A.h
src/Sirius.Core/Transport/: MTQT001A.h  MTTP001A.h
src/Sirius.Infrastructure/Application/: CRAP001A.cpp  CRAP001A.h  CREP001A.cpp
src/Sirius.Infrastructure/Cli/: CRCL001A.cpp  CRCL001A.h  CRCL002A.cpp  CRCL002A.h  CRCL003A.cpp  CRCL003A.h  CRCL004A.cpp  CRCL004A.h  CRCL005A.cpp  CRCL005A.h  CRCL006A.cpp  CRCL006A.h
src/Sirius.Infrastructure/Configuration/: CRCF001A.h  CRCF002A.cpp  CRCF002A.h  CRCF003A.h  CRFM001A.h
src/Sirius.Infrastructure/Interface/: UIMN001A.cpp  UIMN001A.h
src/Sirius.Infrastructure/Platform/: CRPF001A.cpp  CRPF001A.h
src/Sirius.Infrastructure/Plugin/: CRPM001A.cpp  CRPM001A.h
src/Sirius.Infrastructure/Session/: IRCP001A.h  IREX001A.cpp  IREX001A.h  IRLG001A.h  IRRJ001A.cpp  IRRJ001A.h  SMSM001A.h  SNDP001A.h  SNEV001A.h  SNPR001A.h  SNRS001A.cpp  SNRS001A.h  SNST001A.h  SNTL001A.h
src/Sirius.Infrastructure/Viewer/: INVW001A.h
src/Sirius.Infrastructure/Window/: CRWN001A.cpp  CRWN001A.h
src/Sirius.Render/Buffer/: BFIO001A.h  BFTA001A.h
src/Sirius.Render/Camera/: CMBL001A.h  CMFM001A.h
src/Sirius.Render/Integration/: GTRC001A.cpp  GTRC001A.h  INBI001A.h  KNAA001A.h  KNSI001A.h  KNST001A.h  KNTA001A.h  RDIntegratorRK45.cuh  RDIntegratorSymplectic.cuh  RDMath.cuh
src/Sirius.Render/Output/: OUDD001A.h  OUDR001A.h  OUEW001A.cpp  OUEW001A.h  OUIB001A.h  OUMD001A.h  OUPN001A.cpp  OUPN001A.h  RDFL001A.h
src/Sirius.Render/Pipeline/: RDRT001A.cpp  RDRT001A.h  RDST001A.cpp
src/Sirius.Render/Sampling/: SMIS001A.h  SMST001A.h
src/Sirius.Render/Scheduling/: SCTM001A.h
src/Sirius.Render/Session/: CMakeLists.txt  SRCK001A.h  SRCT001A.h  SREP001A.cpp  SRER001A.h  SRHL001A.h  SRIO001A.h  SROR001A.h  SRPG001A.h  SRRS001A.h  SRTL001A.h
src/Sirius.Render/Shader/: RDSD004A.frag  RDSD005A.frag  RDSD005A.vert
src/Sirius.Render/Transport/: RDGeodesic.cuh  RDMetricFunctions.cuh  RDMetricKerr.cuh  TRAA001A.h  TRSI001A.h  TRSP001A.h
src/Sirius.Test/: CMakeLists.txt  CTestLabels.cmake  TSFT001A.h  TSFT002A.h  TSFT003A.h  build_log.txt
src/Sirius.Test/Benchmark/: TSBM001A.cpp  TSBM003A.cpp
src/Sirius.Test/Diagnostic/: TSDG003A.cpp  TSDG006A.cpp  TSDG008A.cpp
src/Sirius.Test/Fixtures/: TSFT001A.h  TSFT002A.h
src/Sirius.Test/Integration/: TSIN001A.cpp  TSIN002A.cpp  TSIN003A.cpp  TSIN004A.cpp  TSIN005A.cpp
src/Sirius.Test/Sirius.Core/Autodiff/: TSMT001A.cpp
src/Sirius.Test/Sirius.Core/Camera/: TSCM001A.cpp
src/Sirius.Test/Sirius.Core/Coordinate/: TSCT001A.cpp
src/Sirius.Test/Sirius.Core/Disk/: TSCR001A.cpp  TSDK001A.cpp  TSDK002A.cpp
src/Sirius.Test/Sirius.Core/Environment/: TSSF001A.cpp
src/Sirius.Test/Sirius.Core/Geodesic/: TSBM001A.cpp  TSDG001A.cpp  TSDG002A.cpp  TSDG003A.cpp  TSDG004A.cpp  TSDG006A.cpp  TSGD001A.cpp  TSGD002A.cpp  TSIN001A.cpp  TSPH003A.cpp  TSPH009A.cpp  TSPH010A.cpp
src/Sirius.Test/Sirius.Core/Jet/: TSJT001A.cpp
src/Sirius.Test/Sirius.Core/Metric/: TSBM002A.cpp  TSBM003A.cpp  TSDG007A.cpp  TSDG008A.cpp  TSIN002A.cpp  TSMT102A.cpp  TSPF001A.cpp  TSPF002A.cpp  TSPH001A.cpp  TSPH002A.cpp  TSPH004A.cpp  TSPH006A.cpp  TSPH007A.cpp  TSPH008A.cpp  TSPH012A.cpp  TSPH014A.cpp  TSSM001A.cpp  TSVAL001A.cpp
src/Sirius.Test/Sirius.Core/Polarisation/: TSPL001A.cpp
src/Sirius.Test/Sirius.Core/PostProcess/: TSPP001A.cpp
src/Sirius.Test/Sirius.Core/Spectral/: TSPH011A.cpp  TSSP001A.cpp  TSSP002A.cpp  TSSP003A.cpp
src/Sirius.Test/Sirius.Core/Symplectic/: TSSI001A.cpp  TSSI002A.cpp
src/Sirius.Test/Sirius.Core/Tensor/: TSMT002A.cpp
src/Sirius.Test/Sirius.Core/Transport/: TSTP001A.cpp
src/Sirius.Test/Sirius.Render/Integration/: TSDG005A.cpp  TSIN006A.cpp
src/Sirius.Test/Sirius.Render/Offline/: TSIN004A.cpp
src/Sirius.Test/Sirius.Render/Pipeline/: TSIN003A.cpp  TSIN007A.cpp
src/Sirius.Test/Sirius.Render/Session/: TSMB001A.cpp  TSOF001A.cpp  TSOF002A.cpp  TSOF008A.cpp  TSOF010A.cpp
src/Sirius.Test/Unit/: TSCM005A.cpp  TSCM006A.cpp  TSCM007A.cpp  TSDK001A.cpp  TSDK002A.cpp  TSFL001A.cpp  TSGD001A.cpp  TSGD002A.cpp  TSJT002A.cpp  TSMB001A.cpp  TSMT001A.cpp  TSMT002A.cpp  TSOF001A.cpp  TSOF002A.cpp  TSOF003A.cpp  TSOF004A.cpp  TSOF005A.cpp  TSOF006A.cpp  TSOF007A.cpp  TSOF008A.cpp  TSOF009A.cpp  TSOF010A.cpp  TSPH001A.cpp  TSPH002A.cpp  TSPH003A.cpp  TSPH004A.cpp  TSPH005A.cpp  TSPH008A.cpp  TSPH009A.cpp  TSPH010A.cpp  TSPH011A.cpp  TSPH014A.cpp  TSPH015A.cpp  TSSI001A.cpp  TSSI002A.cpp  TSSP001A.cpp  TSSP002A.cpp  TSTR001A.cpp  TSVAL001A.cpp
(+17 files in other folders)
